--- a/less/skin-dream.less
+++ b/less/skin-dream.less
@@ -32,9 +32,9 @@
 	-webkit-box-shadow: @Horizontal @Vertical @Blur @Spread @color;
 }
 
-//skin-dream
+//tooltip_skin-dream
 //====================================================
-.skin-dream {
+.tooltip_skin-dream {
 	position: relative;
 	display: inline-block;
 	.tooltip-arrow {
@@ -59,78 +59,78 @@
 	}
 }
 
-.skin-dream.tooltip-n {
-    padding-bottom: 10px;
+.tooltip_skin-dream.tooltip-n {
+    //padding-bottom: 10px;
 
     .tooltip-arrow {
 
         left: 50%;
-        bottom: 6px;
+        bottom: -4px;
         margin-left: -10px;
     }
 }
-.skin-dream.tooltip-s {
-    padding-top: 10px;
+.tooltip_skin-dream.tooltip-s {
+    //padding-top: 10px;
 
     .tooltip-arrow {
 
         left: 50%;
-        top: 6px;
+        top: -4px;
         margin-left: -10px;
     }
 }
-.skin-dream.tooltip-w {
-    padding-right: 10px;
+.tooltip_skin-dream.tooltip-w {
+    //padding-right: 10px;
 
     .tooltip-arrow {
 
     	top: 50%;
-    	right: 6px;
+    	right: -4px;
     	margin-top: -10px;
     }
 }
-.skin-dream.tooltip-e {
-    padding-left: 10px;
+.tooltip_skin-dream.tooltip-e {
+    //padding-left: 10px;
 
     .tooltip-arrow {
 
     	top: 50%;
-    	left: 6px;
+    	left: -4px;
     	margin-top: -10px;
     }
 }
-.skin-dream.tooltip-ne {
-    padding-bottom: 10px;
+.tooltip_skin-dream.tooltip-ne {
+    //padding-bottom: 10px;
 
     .tooltip-arrow {
-    	bottom: 6px;
+    	bottom: -4px;
     	left: 9px;
 
     }
 
 }
-.skin-dream.tooltip-nw {
-    padding-bottom: 10px;
+.tooltip_skin-dream.tooltip-nw {
+    //padding-bottom: 10px;
 
     .tooltip-arrow {
-        bottom: 6px;
+        bottom: -4px;
     	right: 9px;
     }
 }
-.skin-dream.tooltip-se {
-    padding-top: 10px;
+.tooltip_skin-dream.tooltip-se {
+    //padding-top: 10px;
 
     .tooltip-arrow {
         left: 9px;
-        top: 6px;
+        top: -4px;
     }
 }
-.skin-dream.tooltip-sw {
-    padding-top: 10px;
+.tooltip_skin-dream.tooltip-sw {
+    //padding-top: 10px;
 
     .tooltip-arrow {
         right: 9px;
-        top: 6px;
+        top: -4px;
     }
 }
 
